@@ -1,3 +1,7 @@
+2007-04-23: Paul Varner <fuzzyray@gentoo.org>
+	* genpkgindex, epkginfo: Move to /usr/bin from
+	/usr/lib/gentoolkit/bin (Bug #175759)
+
 2007-04-10: Paul Varner <fuzzyray@gentoo.org>
 	* equery: Change equery uses to command to display the best matching
 	uninstalled package version if an uninstalled package is specified.
